add cart and  list page

--- a/checkout.html
+++ b/checkout.html
@@ -7,14 +7,46 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>checkout-page</title>
-
+    <link rel="stylesheet" type="text/css" href="ecommerce.css" media="screen">
     <link rel="stylesheet" type="text/css" href="checkout.css" media="screen">
 </head>
 
 <body>
     <div class="main-container">
 
-
+            <header>
+                    <div class="logo-bar">
+                        <div class="menu-button" id="back-button">
+                            <img src="images/back-button.jpg">
+                        </div>
+                        <div class="heading">
+                            <b>S H O P</b>
+                        </div>
+                        <div class="cart">
+                            <img src="images/cart.jpg">
+                        </div>
+                    </div>
+                    <nav class="menu-bar">
+                        <div>
+                            <a href="#">Men's Outerwear</a>
+                        </div>
+                        <div>
+                            <a href="#">Ladies Outerwear</a>
+                        </div>
+                        <div>
+                            <a href="#">Men's T-Shirts</a>
+                        </div>
+                        <div>
+                            <a href="#">Ladies T-Shirts</a>
+                        </div>
+        
+                    </nav>
+                </header>
+                <section class="page-heading">
+                   <p>  <span> <b>Checkout</b></span>
+                     <br>
+<span>is a demo app - form data will not be sent</span> </p>
+                </section>
 
         <section class="form-section">
             <section class="details">
