--- a/details.html
+++ b/details.html
@@ -91,6 +91,13 @@
             </section>
 
         </div>
+
+
+        <footer >
+                <span class="made-by" ><a href="#">Made by Polymer</a><br></span>
+                <span class="demo"> DEMO ONLY</span>
+            </footer>
+                
     </div>
 </body>
 
