--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <nav class="menu-bar">
-                <div><a href="#">Men's Outerwear</a></div>
+                <div><a href="list.html">Men's Outerwear</a></div>
                 <div><a href="#">Ladies Outerwear</a></div>
                 <div><a href="#">Men's T-Shirts</a></div>
                 <div><a href="#">Ladies T-Shirts</a></div>
@@ -35,7 +35,7 @@
 
             <section class="banner-men">
                 <div class="banner-img">
-                    <img src="images/men.jpg" </div>
+                    <img src="images/men.jpg"> </div>
                     <div class="cloth-category">Men's Outwear</div>
                     <div>
                         <input type="button" class="button" ; value="SHOP NOW">
@@ -45,7 +45,7 @@
 
             <section class="banner-ladies">
                 <div class="banner-img">
-                    <img src="images/ladies.jpg" </div>
+                    <img src="images/ladies.jpg"> </div>
                     <div class="cloth-category">Ladies Outwear</div>
                     <div>
                         <input type="button" class="button" value="SHOP NOW">
@@ -54,7 +54,7 @@
 
             <section class="banner-tshirt-men">
                 <div class="banner-img">
-                    <img src="images/men-tshirt.jpg" </div>
+                    <img src="images/men-tshirt.jpg" ></div>
                     <div class="cloth-category">Men's T-Shirt</div>
                     <div>
                         <input type="button" class="button"  id="button" value="SHOP NOW">
@@ -63,7 +63,7 @@
 
             <section class="banner-tshirt-ladies">
                 <div class="banner-img">
-                    <img src="images/women.jpg" </div>
+                    <img src="images/women.jpg"> </div>
                     <div class="cloth-category">Ladies T-Shirt</div>
                     <div>
                         <input type="button" class="button" id="button" value="SHOP NOW">
