last  page done

--- a/list.html
+++ b/list.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>list-of-items</title>
     <link rel="stylesheet" type="text/css" href="list.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="ecommerce.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="header_footer.css" media="screen">
 </head>
 
 <body>
@@ -39,7 +39,7 @@
                        
                 </section>
     <div class="main-container">
-
+<div class="inner-container">
         <div class="item">
 
 
@@ -332,6 +332,7 @@
 
 
     </div>
+    </div>>
 
     <footer >
             <span class="made-by" ><a href="#">Made by Polymer</a><br></span>
@@ -339,6 +340,7 @@
         </footer>
             
 </div>
+
 </body>
 
 </html>
