styling with css

--- a/checkout.html
+++ b/checkout.html
@@ -20,10 +20,10 @@
                             <img src="images/menu.png">
                         </div>
                         <div class="heading">
-                            <b>S H O P</b>
+                       <a href="index.html"  > <b>S H O P</b></a>  
                         </div>
                         <div class="cart">
-                            <img src="images/cart.jpg">
+                                <a href="cart.html">   <img src="images/cart.jpg"></a>
                         </div>
                     </div>
                     <nav class="menu-bar">
