--- a/details.html
+++ b/details.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="details.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="ecommerce.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="header_footer.css" media="screen">
 </head>
 
 <body>
@@ -18,10 +18,14 @@
                     <img src="images/back-button.jpg">
                 </div>
                 <div class="heading">
-                    <b>S H O P</b>
+                    <a href="index.html">
+                        <b>S H O P</b>
+                    </a>
                 </div>
                 <div class="cart">
-                    <img src="images/cart.jpg">
+                    <a href="cart.html">
+                        <img src="images/cart.jpg">
+                    </a>
                 </div>
             </div>
             <nav class="menu-bar">
@@ -85,7 +89,7 @@
                         </ul>
                     </div>
                     <div>
-                        <input type="submit" value="ADD TO CART" class="submit-button">
+                     <a href="cart.html">  <input type="submit" value="ADD TO CART" class="submit-button"></a> 
                     </div>
                 </form>
             </section>
@@ -93,11 +97,14 @@
         </div>
 
 
-        <footer >
-                <span class="made-by" ><a href="#">Made by Polymer</a><br></span>
-                <span class="demo"> DEMO ONLY</span>
-            </footer>
-                
+        <footer>
+            <span class="made-by">
+                <a href="#">Made by Polymer</a>
+                <br>
+            </span>
+            <span class="demo"> DEMO ONLY</span>
+        </footer>
+
     </div>
 </body>
 
