--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <b>S H O P</b>
                 </div>
                 <div class="cart">
-                    <img src="images/cart.jpg">
+                        <a href="cart.html">   <img src="images/cart.jpg"></a>
                 </div>
             </div>
             <nav class="menu-bar">
@@ -39,7 +39,7 @@
                     <img src="images/men.jpg"> </div>
                     <div class="cloth-category">Men's Outwear</div>
                     <div>
-                        <input type="button" class="button" ; value="SHOP NOW">
+                            <a href="list.html">       <input type="button" class="button" ; value="SHOP NOW"></a>
                     </div>
             </section>
 
@@ -49,7 +49,7 @@
                     <img src="images/ladies.jpg"> </div>
                     <div class="cloth-category">Ladies Outwear</div>
                     <div>
-                        <input type="button" class="button" value="SHOP NOW">
+                            <a href="list.html">       <input type="button" class="button" value="SHOP NOW"></a>
                     </div>
             </section>
 
@@ -58,7 +58,7 @@
                     <img src="images/men-tshirt.jpg" ></div>
                     <div class="cloth-category">Men's T-Shirt</div>
                     <div>
-                        <input type="button" class="button"  id="button" value="SHOP NOW">
+                            <a href="list.html">        <input type="button" class="button"  id="button" value="SHOP NOW"> </a>
                     </div>
             </section>
 
@@ -67,7 +67,7 @@
                     <img src="images/women.jpg"> </div>
                     <div class="cloth-category">Ladies T-Shirt</div>
                     <div>
-                        <input type="button" class="button" id="button" value="SHOP NOW">
+                            <a href="list.html">   <input type="button" class="button" id="button" value="SHOP NOW"></a>
                     </div>
             </section>
             </div>
