--- a/cart.html
+++ b/cart.html
@@ -18,10 +18,14 @@
                     <img src="images/menu.png">
                 </div>
                 <div class="heading">
-                <b>  <a href="index.html" >S H O P</a></b>
+                    <b>
+                        <a href="index.html">S H O P</a>
+                    </b>
                 </div>
                 <div class="cart">
-                    <img src="images/cart.jpg">
+                    <a href="cart.html">
+                        <img src="images/cart.jpg">
+                    </a>
                 </div>
             </div>
             <nav class="menu-bar">
@@ -90,13 +94,13 @@
                     </span>
                     <span>120</span>
                     <div>
-                        <input type="button" id="button" value="PLACE ORDER ">
+                            <a href="checkout.html">        <input type="button" id="button" value="PLACE ORDER "></a>
                     </div>
 
                 </div>
 
                 <div>
-                    <input type="button" id="button1" value="PLACE ORDER ">
+                        <a href="checkout.html">      <input type="button" id="button1" value="PLACE ORDER "></a>
                 </div>
 
 
