set margins and paddings

--- a/cart.html
+++ b/cart.html
@@ -49,68 +49,74 @@
                 <h3>Your Cart</h3>
                 <span>(16 items)</span>
             </div>
-            <section class="cart-section">
-                <div class="item-image">
-                    <img src="images/item1.jpg" alt="image">
-
-                </div>
-                <div class="item-name">
-                    <span>Anvil L/S Crew Neck - Grey
-                    </span>
-                </div>
-                <div class="Quantity-selector">
-                    <select name="quantity" value="Quantity">
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                        <option value="4">4</option>
-                        <option value="5">5</option>
-                    </select>
-
-                </div>
-                <div class="size-selector">
-                    <select name="size">
-                        <option value="XS">XS</option>
-                        <option value="S">S</option>
-                        <option value="M">M</option>
-                        <option value="L">L</option>
-                        <option value="XL">XL</option>
-                    </select>
-
-                </div>
-                <div class="remove-button">
-                    <a href="#">
-                        <span>X</span>
-                    </a>
-
-                </div>
-
-
-            </section>
-            <section>
-                <div class="total-amount">
-                    <span>
-                        <b>Total:</b>
-                    </span>
-                    <span>120</span>
-                    <div>
-                            <a href="checkout.html">        <input type="button" id="button" value="PLACE ORDER "></a>
+            <div class="item-details">
+                <div class="item-image-name">
+                    <div class="item-image">
+                        <img src="images/item1.jpg" alt="image">
+                    </div>
+                    <div class="item-name">Anvil L/S Crew Neck - Grey
                     </div>
 
                 </div>
+                <section class="cart-section">
 
-                <div>
-                        <a href="checkout.html">      <input type="button" id="button1" value="PLACE ORDER "></a>
-                </div>
+                    <div class="Quantity-selector">
+                        <label>Quantity:</label>
+                        <select name="quantity" value="Quantity">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                        </select>
+
+                    </div>
+                    <div class="size-selector">
+                        <label>Size:</label>
+                        <select name="size">
+                            <option value="XS">XS</option>
+                            <option value="S">S</option>
+                            <option value="M">M</option>
+                            <option value="L">L</option>
+                            <option value="XL">XL</option>
+                        </select>
+
+                    </div>
+                    <div class="remove-button">
+                        <a href="#">
+                            <img src="images/ico-x.png">
+                        </a>
+
+                    </div>
 
 
-                <footer>
-                    <span class="made-by">
-                        <a href="#">Made by Polymer</a>
-                        <br>
-                    </span>
-                    <span class="demo"> DEMO ONLY</span>
-                </footer>
+                </section>
+            </div>
+
+            <div class="total-amount">
+
+                <b>Total:</b>
+                <span>120</span>
+
+                <a href="checkout.html">
+                    <input type="button" id="button" value="CHECKOUT">
+                </a>
+
+            </div>
+
+            <div>
+                <a href="checkout.html">
+                    <input type="button" id="button1" value="CHECKOUT"> </a>
+            </div>
+
+
+            <footer>
+                <span class="made-by">
+                    <a href="#">Made by Polymer</a>
+                    <br>
+                </span>
+                <span class="demo"> DEMO ONLY</span>
+            </footer>
         </div>
     </div>
 
