--- a/index.html
+++ b/index.html
@@ -21,14 +21,24 @@
                     <b>S H O P</b>
                 </div>
                 <div class="cart">
-                        <a href="cart.html">   <img src="images/cart.jpg"></a>
+                    <a href="cart.html">
+                        <img src="images/cart.jpg">
+                    </a>
                 </div>
             </div>
             <nav class="menu-bar">
-                <div><a href="list.html">Men's Outerwear</a></div>
-                <div><a href="#">Ladies Outerwear</a></div>
-                <div><a href="#">Men's T-Shirts</a></div>
-                <div><a href="#">Ladies T-Shirts</a></div>
+                <div>
+                    <a href="list.html">Men's Outerwear</a>
+                </div>
+                <div>
+                    <a href="#">Ladies Outerwear</a>
+                </div>
+                <div>
+                    <a href="#">Men's T-Shirts</a>
+                </div>
+                <div>
+                    <a href="#">Ladies T-Shirts</a>
+                </div>
 
             </nav>
         </header>
@@ -37,48 +47,59 @@
             <section class="banner-men">
                 <div class="banner-img">
                     <img src="images/men.jpg"> </div>
-                    <div class="cloth-category">Men's Outwear</div>
-                    <div>
-                            <a href="list.html">       <input type="button" class="button" ; value="SHOP NOW"></a>
-                    </div>
+                <div class="cloth-category">Men's Outwear</div>
+                <div>
+                    <a href="list.html">
+                        <input type="button" class="button" ; value="SHOP NOW">
+                    </a>
+                </div>
             </section>
 
 
             <section class="banner-ladies">
                 <div class="banner-img">
                     <img src="images/ladies.jpg"> </div>
-                    <div class="cloth-category">Ladies Outwear</div>
-                    <div>
-                            <a href="list.html">       <input type="button" class="button" value="SHOP NOW"></a>
-                    </div>
+                <div class="cloth-category">Ladies Outwear</div>
+                <div>
+                    <a href="list.html">
+                        <input type="button" class="button" value="SHOP NOW">
+                    </a>
+                </div>
             </section>
 
             <section class="banner-tshirt-men">
                 <div class="banner-img">
-                    <img src="images/men-tshirt.jpg" ></div>
-                    <div class="cloth-category">Men's T-Shirt</div>
-                    <div>
-                            <a href="list.html">        <input type="button" class="button"  id="button" value="SHOP NOW"> </a>
-                    </div>
+                    <img src="images/men-tshirt.jpg">
+                </div>
+                <div class="cloth-category">Men's T-Shirt</div>
+                <div>
+                    <a href="list.html">
+                        <input type="button" class="button" id="button" value="SHOP NOW"> </a>
+                </div>
             </section>
 
             <section class="banner-tshirt-ladies">
                 <div class="banner-img">
                     <img src="images/women.jpg"> </div>
-                    <div class="cloth-category">Ladies T-Shirt</div>
-                    <div>
-                            <a href="list.html">   <input type="button" class="button" id="button" value="SHOP NOW"></a>
-                    </div>
+                <div class="cloth-category">Ladies T-Shirt</div>
+                <div>
+                    <a href="list.html">
+                        <input type="button" class="button" id="button" value="SHOP NOW">
+                    </a>
+                </div>
             </section>
-            </div>
+        </div>
 
-            <footer >
-                <span class="made-by" ><a href="#">Made by Polymer</a><br></span>
-                <span class="demo"> DEMO ONLY</span>
-            </footer>
-                
-           
-            </div>
+        <footer>
+            <span class="made-by">
+                <a href="#">Made by Polymer</a>
+                <br>
+            </span>
+            <span class="demo"> DEMO ONLY</span>
+        </footer>
+
+
+    </div>
 </body>
 
 </html>
