--- a/list.html
+++ b/list.html
@@ -70,298 +70,266 @@
 
 
                         <div class="item-detail">
-                            <span>
-                                <b>Anvil L/S Crew Neck - Grey
-                                </b>
+                            <span class="item-name">
+                                Anvil L/S Crew Neck - Grey
+
                             </span>
                             <br>
-                            <span>
-                                <b>122
-                                </b>
-                            </span>
+                            <span class="item-price">$123</span>
 
                         </div>
                     </a>
                 </div>
 
 
-
                 <div class="item">
 
-
-                    <div class="item-image">
-                        <img src="images/item1.jpg">
-
-
-                    </div>
+                    <a href="details.html">
+                        <div class="item-image">
+                            <img src="images/item1.jpg">
 
 
-                    <div class="item-detail">
-                        <span>
-                            <b>Anvil L/S Crew Neck - Grey
-                            </b>
-                        </span>
-                        <br>
-                        <span>
-                            <b>122
-                            </b>
-                        </span>
+                        </div>
 
-                    </div>
+
+                        <div class="item-detail">
+                            <span class="item-name">
+                                Anvil L/S Crew Neck - Grey
+
+                            </span>
+                            <br>
+                            <span class="item-price">$123</span>
+
+                        </div>
+                    </a>
                 </div>
                 <div class="item">
 
-
-                    <div class="item-image">
-                        <img src="images/item1.jpg">
-
-
-                    </div>
+                    <a href="details.html">
+                        <div class="item-image">
+                            <img src="images/item1.jpg">
 
 
-                    <div class="item-detail">
-                        <span>
-                            <b>Anvil L/S Crew Neck - Grey
-                            </b>
-                        </span>
-                        <br>
-                        <span>
-                            <b>122
-                            </b>
-                        </span>
+                        </div>
 
-                    </div>
+
+                        <div class="item-detail">
+                            <span class="item-name">
+                                Anvil L/S Crew Neck - Grey
+
+                            </span>
+                            <br>
+                            <span class="item-price">$123</span>
+
+                        </div>
+                    </a>
                 </div>
                 <div class="item">
 
-
-                    <div class="item-image">
-                        <img src="images/item1.jpg">
-
-
-                    </div>
+                    <a href="details.html">
+                        <div class="item-image">
+                            <img src="images/item1.jpg">
 
 
-                    <div class="item-detail">
-                        <span>
-                            <b>Anvil L/S Crew Neck - Grey
-                            </b>
-                        </span>
-                        <br>
-                        <span>
-                            <b>122
-                            </b>
-                        </span>
-
-                    </div>
-                </div>
-
-                <div class="item">
+                        </div>
 
 
-                    <div class="item-image">
-                        <img src="images/item1.jpg">
+                        <div class="item-detail">
+                            <span class="item-name">
+                                Anvil L/S Crew Neck - Grey
 
+                            </span>
+                            <br>
+                            <span class="item-price">$123</span>
 
-                    </div>
-
-
-                    <div class="item-detail">
-                        <span>
-                            <b>Anvil L/S Crew Neck - Grey
-                            </b>
-                        </span>
-                        <br>
-                        <span>
-                            <b>122
-                            </b>
-                        </span>
-
-                    </div>
-                </div>
-
-                <div class="item">
-
-
-                    <div class="item-image">
-                        <img src="images/item1.jpg">
-
-
-                    </div>
-
-
-                    <div class="item-detail">
-                        <span>
-                            <b>Anvil L/S Crew Neck - Grey
-                            </b>
-                        </span>
-                        <br>
-                        <span>
-                            <b>122
-                            </b>
-                        </span>
-
-                    </div>
-                </div>
-
-                <div class="item">
-
-
-                    <div class="item-image">
-                        <img src="images/item1.jpg">
-
-
-                    </div>
-
-
-                    <div class="item-detail">
-                        <span>
-                            <b>Anvil L/S Crew Neck - Grey
-                            </b>
-                        </span>
-                        <br>
-                        <span>
-                            <b>122
-                            </b>
-                        </span>
-
-                    </div>
-                </div>
-
-                <div class="item">
-
-
-                    <div class="item-image">
-                        <img src="images/item1.jpg">
-
-
-                    </div>
-
-
-                    <div class="item-detail">
-                        <span>
-                            <b>Anvil L/S Crew Neck - Grey
-                            </b>
-                        </span>
-                        <br>
-                        <span>
-                            <b>122
-                            </b>
-                        </span>
-
-                    </div>
-                </div>
-
-                <div class="item">
-
-
-                    <div class="item-image">
-                        <img src="images/item1.jpg">
-
-
-                    </div>
-
-
-                    <div class="item-detail">
-                        <span>
-                            <b>Anvil L/S Crew Neck - Grey
-                            </b>
-                        </span>
-                        <br>
-                        <span>
-                            <b>122
-                            </b>
-                        </span>
-
-                    </div>
-                </div>
-
-                <div class="item">
-
-
-                    <div class="item-image">
-                        <img src="images/item1.jpg">
-
-
-                    </div>
-
-
-                    <div class="item-detail">
-                        <span>
-                            <b>Anvil L/S Crew Neck - Grey
-                            </b>
-                        </span>
-                        <br>
-                        <span>
-                            <b>122
-                            </b>
-                        </span>
-
-                    </div>
+                        </div>
+                    </a>
                 </div>
                 <div class="item">
 
-
-                    <div class="item-image">
-                        <img src="images/item1.jpg">
-
-
-                    </div>
+                    <a href="details.html">
+                        <div class="item-image">
+                            <img src="images/item1.jpg">
 
 
-                    <div class="item-detail">
-                        <span>
-                            <b>Anvil L/S Crew Neck - Grey
-                            </b>
-                        </span>
-                        <br>
-                        <span>
-                            <b>122
-                            </b>
-                        </span>
+                        </div>
 
-                    </div>
+
+                        <div class="item-detail">
+                            <span class="item-name">
+                                Anvil L/S Crew Neck - Grey
+
+                            </span>
+                            <br>
+                            <span class="item-price">$123</span>
+
+                        </div>
+                    </a>
                 </div>
-
                 <div class="item">
 
-
-                    <div class="item-image">
-                        <img src="images/item1.jpg">
-
-
-                    </div>
+                    <a href="details.html">
+                        <div class="item-image">
+                            <img src="images/item1.jpg">
 
 
-                    <div class="item-detail">
-                        <span>
-                            <b>Anvil L/S Crew Neck - Grey
-                            </b>
-                        </span>
-                        <br>
+                        </div>
 
-                        <span>
-                            <b>122
-                            </b>
-                        </span>
 
-                    </div>
+                        <div class="item-detail">
+                            <span class="item-name">
+                                Anvil L/S Crew Neck - Grey
+
+                            </span>
+                            <br>
+                            <span class="item-price">$123</span>
+
+                        </div>
+                    </a>
                 </div>
+                <div class="item">
+
+                    <a href="details.html">
+                        <div class="item-image">
+                            <img src="images/item1.jpg">
 
 
+                        </div>
 
+
+                        <div class="item-detail">
+                            <span class="item-name">
+                                Anvil L/S Crew Neck - Grey
+
+                            </span>
+                            <br>
+                            <span class="item-price">$123</span>
+
+                        </div>
+                    </a>
+                </div>
+                <div class="item">
+
+                    <a href="details.html">
+                        <div class="item-image">
+                            <img src="images/item1.jpg">
+
+
+                        </div>
+
+
+                        <div class="item-detail">
+                            <span class="item-name">
+                                Anvil L/S Crew Neck - Grey
+
+                            </span>
+                            <br>
+                            <span class="item-price">$123</span>
+
+                        </div>
+                    </a>
+                </div>
+                <div class="item">
+
+                    <a href="details.html">
+                        <div class="item-image">
+                            <img src="images/item1.jpg">
+
+
+                        </div>
+
+
+                        <div class="item-detail">
+                            <span class="item-name">
+                                Anvil L/S Crew Neck - Grey
+
+                            </span>
+                            <br>
+                            <span class="item-price">$123</span>
+
+                        </div>
+                    </a>
+                </div>
+                <div class="item">
+
+                    <a href="details.html">
+                        <div class="item-image">
+                            <img src="images/item1.jpg">
+
+
+                        </div>
+
+
+                        <div class="item-detail">
+                            <span class="item-name">
+                                Anvil L/S Crew Neck - Grey
+
+                            </span>
+                            <br>
+                            <span class="item-price">$123</span>
+
+                        </div>
+                    </a>
+                </div>
+                <div class="item">
+
+                    <a href="details.html">
+                        <div class="item-image">
+                            <img src="images/item1.jpg">
+
+
+                        </div>
+
+
+                        <div class="item-detail">
+                            <span class="item-name">
+                                Anvil L/S Crew Neck - Grey
+
+                            </span>
+                            <br>
+                            <span class="item-price">$123</span>
+
+                        </div>
+                    </a>
+                </div>
+                <div class="item">
+
+                    <a href="details.html">
+                        <div class="item-image">
+                            <img src="images/item1.jpg">
+
+
+                        </div>
+
+
+                        <div class="item-detail">
+                            <span class="item-name">
+                                Anvil L/S Crew Neck - Grey
+
+                            </span>
+                            <br>
+                            <span class="item-price">$123</span>
+
+                        </div>
+                    </a>
+                </div>
 
             </div>
-        </div>
-        ,.
 
-        <footer>
-            <span class="made-by">
-                <a href="#">Made by Polymer</a>
-                <br>
-            </span>
-            <span class="demo"> DEMO ONLY</span>
-        </footer>
+
+
+
+        </div>
+    </div>
+    ,.
+
+    <footer>
+        <span class="made-by">
+            <a href="#">Made by Polymer</a>
+            <br>
+        </span>
+        <span class="demo"> DEMO ONLY</span>
+    </footer>
     </div>
 
 </body>
